fixed location of contact button
was overlapped by info section on Opera

--- a/styles/main.css
+++ b/styles/main.css
@@ -127,7 +127,7 @@ p {
 
 #cbutton {
   position: absolute;
-  bottom: -400px;
+  bottom: -500px;
   left: 0;
   font-family: "Harmattan";
   padding-bottom: 10px;
